<resources>
    <string name="app_name">Todo App</string>
    <string name="tEmail">Masukkan Nama</string>
    <string name="ttEmail">Email</string>
    <string name="tPassword">Masukkan Password</string>
    <string name="bsignin">Sign-In</string>
    <string name="tLogin">LOGIN</string>
    <string name="tData">Your Data</string>
    <string name="username">Email: </string>
    <string name="tPassword3">Password: </string>
    <string name="txemail">Email Result</string>
    <string name="txpassword">Password Result</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Registrasi</string>
    <string name="mlogout">Logout</string>
    <string name="ldaftar">Register</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">SIGN-IN</string>
    <string name="todoPng">Welcome in Todo App</string>
    <string name="todo">TODO</string>
    <string name="mmRegister">Register</string>
    <string name="data">data</string>
    <string name="mTask">Masukkan Task</string>
    <string name="mJenis">Masukkan Jenis Task</string>
    <string name="mTime">Masukkan Lama Task</string>
    <string name="selamatdatang">Selamat Datang</string>
    <string name="jenis_task">Jenis Task</string>
    <string name="task5">Must Todo</string>
    <string name="task">Task</string>
    <string name="task2">Jenis Task</string>
    <string name="test">Test input</string>
    <string name="pencetan">Register</string>
    <string name="gambar">gambar</string>
    <string name="submit">Submit</string>
    <string name="taskgambar">taskgambar</string>
    <string name="time_task">Time Task</string>
    <string name="hEmail">Nama Anda</string>
    <string name="hEmail2">Nama Anda</string>
    <string name="simpan">Save</string>
    <string name="HTask">Task Result</string>
    <string name="task3">Task</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="HTaskJenis2">Jenis Task Result</string>
    <string name="HTaskTime">Time Task Result</string>
    <string name="task4">Waktu Task</string>
    <string name="name2">Name</string>


</resources>